--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,7 @@
 <h1>Home#index</h1>
 <p>Find me in app/views/home/index.html.erb</p>
+
+
+<script type="text/template" id="contactTemplate" >
+  {{ first_name }} {{ last_name }}: {{ phone }}
+</script>
