changed phone to string type

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,6 +2,11 @@
 <p>Find me in app/views/home/index.html.erb</p>
 
 
-<script type="text/template" id="contactTemplate" >
-  {{ first_name }} {{ last_name }}: {{ phone }}
+<script type="text/template" id="contactTemplate">
+  {{ first_name }} {{ last_name }} - {{ phone }}
+</script>
+
+<script type="text/template" id="editTemplate">
+  <input type="text" />
+  <input type="submit" value="Add New Contact" />
 </script>
