--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,12 +1,12 @@
 <h1>Home#index</h1>
 <p>Find me in app/views/home/index.html.erb</p>
 
+<form id="addContact" action="">
+  <input type="text" />
+  <input type="submit" value="Add New Contact" />
+</form>
 
 <script type="text/template" id="contactTemplate">
   {{ first_name }} {{ last_name }} - {{ phone }}
 </script>
 
-<script type="text/template" id="editTemplate">
-  <input type="text" />
-  <input type="submit" value="Add New Contact" />
-</script>
