added new contact form/view

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,21 @@
 <p>Find me in app/views/home/index.html.erb</p>
 
 <form id="addContact" action="">
-  <input type="text" />
+  <label for="first_name">first name:</label>
+  <input name="first_name" type="text" />
+
+  <br>
+
+  <label for="last_name">last name:</label>
+  <input name="last_name" type="text" />
+
+  <br>
+
+  <label for="phone">phone number:</label>
+  <input name="phone" type="text" />
+
+  <br>
+
   <input type="submit" value="Add New Contact" />
 </form>
 
