form submitting appropriate for edits and adds; validation not working

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -23,6 +23,6 @@
 </script>
 
 <script type="text/template" id="contactTemplate">
-  {{ first_name }} {{ last_name }} - {{ phone }}  <input type="button" class="edit" value="edit" />
+  {{ first_name }} {{ last_name }} - {{ phone }}  <input type="button" class="edit" value="edit" /> <input type="button" class="delete" value="delete" />
 </script>
 
